--- a/style.css
+++ b/style.css
@@ -1,127 +1,181 @@
 body{
-    text-decoration: none;
-    background-color: #003;
-    font-family: Arial;
+  text-decoration: none;
+  background-color: #0D7C66;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 
-a{text-decoration: none; color:black;}
-a:hover{text-decoration: underline;}
+a{font-size:large ;
+  text-decoration: none;
+   }
+
 
 body>header{
-    background-color: #fff;
-    display:flex;
-    width:80em;
-    margin:0 auto 2em auto;
-    padding:0;
+  
+  border-radius: 3em;
+  background-color: #605678;
+  display:flex;
+  width:80em;
+  margin:0 auto 2em auto;
+  padding:0;
 
 }
 body>header img{
-    height:5em;
+  height:5em;
 }
 body>header #menu {
-    display:flex;
-    width:50%;
-    align-items: stretch;
-    border-left: 1px solid #99b;
+  
+  display:flex;
+  width:50%;
+  align-items: stretch;
+  
 }
 body>header #menu a{
-    flex:1;
-    text-align: center;
-    padding-top:2em;
-    border-right: 1px solid #99b;
+  font-weight: bolder;
+  color:#D7C3F1;
+  border-radius: 3em;
+  flex:1;
+  text-align: center;
+  padding-top:2em;
+  ;
 }
 body>header a:hover
-{
-    background-color: #99b;
+{border-radius: 3em;
+  
+  background-color: #41B3A2;
 }
 body>header ul{list-style: none;}
 body>header #user
 {
-    margin-left: auto;
-    flex:0.2;
-    border-left: 1px solid #99b;
+  border-radius: 3em;
+  margin-left: auto;
+  flex:0.2;
+  ;
 }
 body>header #user>a{
-    display:block;
-    text-align: center;
-    padding:2em 0;
-    width:100%;
+  font-weight: bolder;
+  color:#D7C3F1;
+  border-radius: 3em;
+  display:block;
+  text-align: center;
+  padding:2em 0;
+  width:100%;
 }
 body>header #user ul{
-    display: none;
-    position: absolute;
-    padding:0;
-    margin:0;
-    margin-left:-5em;
-    background-color: #fff;
-    border: 1px solid #99b;
-
-    z-index: 1;
+ 
+  border-radius:3em;
+  display: none;
+  position: absolute;
+  padding:0;
+  margin:0;
+  margin-left:-5em;
+  background-color: #605678;
+  z-index: 1;
 }
 body>header #user ul li a{
-    display:block;
-    width:10em;
-    padding:1em;
-    border-bottom: 1px solid #99b;
+  font-weight: bolder;
+  color:#D7C3F1;
+  display:block;
+  width:10em;
+  padding:1em;
+
 }
 body>header #user:hover ul{
-    display:block;
+  display:block;
 }
 
 
 #wrapper{
-    display:flex;
-    width:80em;
-    margin:0 auto 2em auto;
+  display:flex;
+  width:80em;
+  margin:0 auto 2em auto;
 }
 #wrapper aside{
-    background-color: #fff;
-    flex:1;
-    padding:1em;
-    border-radius: 1em;
+  background-color: #41B3A2;
+  flex:1;
+  padding:1em;
+  border-radius: 1em;
 }
+#wrapper aside section h3{
+  text-align: center;
+    color: #605678;
+  }
+  #wrapper aside h2{
+    font-size: xxx-large;
+    text-align: center;
+      color: #605678;
+    }
+    #wrapper aside p{
+      font-size: large;
+      font-weight: bolder;
+      text-align: center;
+        color: #605678;
+      }
+  #wrapper aside section p{
+    text-align: center;
+  font-size: medium;
+  font-weight: lighter;
+    color: #605678;
+  }
 #wrapper aside img{
-    display: block;
-    width:50%;
-    margin:auto;
+  display: block;
+  width:50%;
+  margin:auto;
 }
 
 #wrapper main{
-    flex:3;
-    padding-left:1em;
-    height: 80vh;
-    overflow-y:  scroll;
+  flex:3;
+  padding-left:1em;
+  height: 80vh;
+  overflow-y:  scroll;
 }
 #wrapper main article{
-    background-color: #fff;
-    padding:1em;
-    margin-bottom: 1em ;
-    border-radius: 1em;
+  text-align: center;
+  color: #605678;
+  background-color: #BDE8CA;
+  padding:1em;
+  margin-bottom: 1em ;
+  border-radius: 1em;
 }
 #wrapper main article h3{
-    margin:0;
-    padding:0;
-    font-weight: normal;
-    font-size:1em;
-
+  color: #BDE8CA ;
+  margin:0;
+  padding:0;
+  font-weight: normal;
+  font-size:1em;
+  
 }
 #wrapper main article time{
-    float:left;
+  font-size: small;
+  font-weight: bolder;
+  float:left;
 }
 #wrapper main article address{
-    text-align: right;
-    margin-bottom: 1em;
+  
+  text-align: right;
+  margin-bottom: 1em;
+}
+#wrapper main article address a{
+  font-size: large;
+  font-weight: bolder;
+  color: #0D7C66;
 }
 #wrapper main article p{
-    margin:0;
+  margin:0;
 }
 #wrapper main article footer{
-    margin-top: 1em;
-    text-align: right;
+  
+  margin-top: 1em;
+  text-align: right;
 }
+#wrapper main article footer a {
+  font-weight: bolder;
+  color: #0D7C66;}
 #wrapper main article footer small{
-    float:left;
+  float:left;
+  font-size: medium;
+  color: #0D7C66;
+  font-weight: bolder;
 }
 
 
@@ -131,7 +185,7 @@ body>header #user:hover ul{
 #wrapper.admin h2{text-align: center;}
 #wrapper.admin h3{margin:0;}
 #wrapper.admin nav{text-align: right;}
-#wrapper.admin article{border:1px solid #ddd;border-radius: 1em;padding:1em;margin:1em;}
+#wrapper.admin article{border:1px solid #0D7C66;border-radius: 1em;padding:1em;margin:1em;}
 #wrapper.admin article p{float:left;margin:0;}
 
 
@@ -139,23 +193,23 @@ body>header #user:hover ul{
 .parameters dl dd{margin-left:15em;line-height: 1.5em;}
 
 .contacts {
-    display:flex;
-    flex-wrap: wrap;
-    align-items:flex-start;
-    align-content: flex-start ;
+  display:flex;
+  flex-wrap: wrap;
+  align-items:flex-start;
+  align-content: flex-start ;
 }
 .contacts article{
-    width:25em;
-    height:7em;
-    margin-right: 1em;
+  width:25em;
+  height:7em;
+  margin-right: 1em;
 }
 .contacts article img{
-    float:right;
-    height: 5em;
+  float:right;
+  height: 5em;
 }
 
 pre{
-    color:#aaa;
+  color:#aaa;
 }
 
 form dl dt{float:left;font-weight: bold;line-height: 1.5em;}
