--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
   text-decoration: none;
   background-color: #0D7C66;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  
+
 }
 
 
@@ -239,3 +239,36 @@ form dl dt{float:left;font-weight: bold;line-height: 1.5em;}
 form dl dd{margin-left:10em;line-height: 1.5em;margin-bottom: 1em}
 form dl dd textarea{width:40em;height: 15em; padding: 1em;;}
 
+/* Responsivité */
+@media (max-width: 768px) {
+    body>header {
+        flex-direction: column;
+        align-items: center;
+        padding: 1em;
+    }
+    body>header #menu {
+        width: 100%;
+    }
+    body>header #user {
+        width: 100%;
+        text-align: center;
+    }
+    #wrapper {
+        flex-direction: column;
+        width: 100%;
+    }
+    #wrapper aside, #wrapper main {
+        width: 100%;
+        padding: 1em;
+    }
+    .contacts {
+        flex-direction: column;
+    }
+    .contacts article {
+        width: 100%;
+        margin-bottom: 1em;
+    }
+    form dl dd textarea {
+        width: 100%;
+    }
+}
